# QPaperMaker

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  android-pwa-plan.md  design.md  docker-compose.yml  pyproject.toml  supervisord.conf
.claude/: settings.local.json
ai_pipeline/: .env.example  main.py
ai_pipeline/agents/: content_analyst.py  crew.py  paper_formatter.py  quality_reviewer.py  question_designer.py
ai_pipeline/models/: schemas.py
ai_pipeline/routers/: generate.py  ocr.py  rag.py
ai_pipeline/services/: __init__.py  embeddings.py  ocr_service.py  pdf_generator.py  vector_store.py
backend/: .env.example  package-lock.json  package.json
backend/src/: index.js
backend/src/db/: sqlite.js
backend/src/middleware/: auth.js
backend/src/routes/: auth.js  books.js  papers.js
backend/src/services/: aiClient.js
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/pages/: Dashboard.jsx  GeneratePaper.jsx  Login.jsx  Register.jsx  Upload.jsx
