[project]
name = "ai-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "openai>=1.57.0",
    "chromadb>=0.4.24,<0.5.0",
    "crewai==0.67.1",
    "reportlab==4.2.2",
    "python-dotenv==1.0.1",
    "setuptools<80",
]
